@@ -1,3 +1,9 @@
+2013-07-17  Ross Johnson <ross dot johnson at homemail dot com dot au>
+
+	* pthread_getname_np.c: Replace strncpy_s with strncpy to support older
+	MSVCRT.DLLs.
+	* pthread_attr_getname_np.c: Likewise.
+
 2013-06-19  Ross Johnson <ross dot johnson at homemail dot com dot au>
 
 	* pthread_attr_init.c: Initialise thread name element.
